--- a/unocss/uno.css
+++ b/unocss/uno.css
@@ -1,5 +1,5 @@
 @import "@unocss/reset/eric-meyer.css";
-@import "@unocss/preset-twind4";
+@import "@unocss/preset-wind4";
 @import "@unocss/preset-icons";
 @import "@unocss/preset-web-fonts";
 
